Hide actual PIN in edit modal prompt

--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
 <div class="modal" id="editPinModal">
     <div class="glass-popup">
         <div class="popup-title">EDIT LOCKED</div>
-        <div class="popup-sub">Enter PIN 8514 to edit item</div>
+        <div class="popup-sub">Enter PIN xxxx to edit item</div>
         <input type="password" id="editPinInput" class="popup-input" placeholder="****" maxlength="4" onkeydown="if(event.key === 'Enter') verifyEditPin()">
         <div class="popup-btn-grid">
             <button class="btn-action btn-cancel" onclick="closeModal('editPinModal')">CANCEL</button>
