Mask PIN in edit modal for security

--- a/index.html
+++ b/index.html
@@ -2321,7 +2321,7 @@
             
             // Customize the modal for editing
             document.getElementById('editPinModal').querySelector('.popup-title').textContent = "EDIT LOCKED";
-            document.getElementById('editPinModal').querySelector('.popup-sub').textContent = `Enter PIN 8514 to edit "${itemName}"`;
+            document.getElementById('editPinModal').querySelector('.popup-sub').textContent = `Enter PIN xxxx to edit "${itemName}"`;
             
             // Override the verify function for editing
             const verifyBtn = document.getElementById('editPinModal').querySelector('.btn-pay');
